fix: scrollbar

--- a/random-game/assets/styles/style.css
+++ b/random-game/assets/styles/style.css
@@ -21,7 +21,9 @@
   user-select: none;
   transition: opacity 0.3s;
 }
-
+::-webkit-scrollbar {
+  width: 0;
+}
 ol,
 ul,
 a,
